# mkv-chain

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  travis.sh
docs/: .rustc_info.json  CNAME  index.html  search-index.js  settings.html  source-files.js
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
docs/doc/markov_chain/: all.html  index.html  macro.markovchain!.html  macro.markovchain.html  macro.matrix.html  macro.sq_matrix!.html  macro.sq_matrix.html  macro.vector.html  sidebar-items.js  struct.MarkovChain2.html  struct.MarkovChain3.html  struct.MarkovChain4.html  struct.MarkovChain5.html  struct.MarkovChain6.html
docs/doc/markov_chain/alg/: index.html  sidebar-items.js  struct.Matrix2.html  struct.Matrix3.html  struct.Matrix4.html  struct.Matrix5.html  struct.Matrix6.html  struct.Vec2.html  struct.Vec3.html  struct.Vec4.html  struct.Vec5.html  struct.Vec6.html
docs/doc/markov_chain/linalg/: index.html  sidebar-items.js  struct.Matrix2.html  struct.Matrix3.html  struct.Matrix4.html  struct.Matrix5.html  struct.Matrix6.html  struct.Vec2.html  struct.Vec3.html  struct.Vec4.html  struct.Vec5.html  struct.Vec6.html
docs/doc/mkv_chain/: all.html  index.html  macro.markovchain.html  macro.matrix.html  macro.vector.html  sidebar-items.js  struct.MarkovChain2.html  struct.MarkovChain3.html  struct.MarkovChain4.html  struct.MarkovChain5.html  struct.MarkovChain6.html
docs/doc/mkv_chain/linalg/: index.html  sidebar-items.js  struct.Matrix2.html  struct.Matrix3.html  struct.Matrix4.html  struct.Matrix5.html  struct.Matrix6.html  struct.Vec2.html  (+4 more)
docs/markov_chain/: all.html  index.html  sidebar-items.js  struct.MarkovChain3.html
docs/markov_chain/alg/: index.html  sidebar-items.js  struct.Matrix3.html  struct.Vec3.html
docs/src/markov_chain/: lib.rs.html
examples/: markov3.rs
src/: alg.rs  lib.rs  macros.rs  main.rs
tests/: serialise.rs
(+29 files in other folders)
