[package]
name = "mkv_chain"
version = "0.2.2"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2018"

license-file="LICENSE"
readme = "README.md"

description="A Stochastic Oriented Markov Chain Crate"

documentation="https://hyyking.github.io/markov-chain-rs"

homepage="https://github.com/hyyking/markov-chain-rs"
repository="https://github.com/hyyking/markov-chain-rs"

keywords=["stochastic", "markov", "probability", "statistics", "markov-chain"]

include = [
    "**/*.rs",
    "Cargo.toml",
]
