[package]
name = "mkv_chain"
version = "0.3.0"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2018"

license-file="LICENSE"
readme = "README.md"

description="A Stochastic Oriented Markov Chain Crate"

documentation="https://docs.rs/mkv_chain/0.2.2"

homepage="https://github.com/hyyking/markov-chain-rs"
repository="https://github.com/hyyking/markov-chain-rs"

keywords=["stochastic", "markov", "probability", "statistics", "markov-chain"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
default = []

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
version-sync = "0.8"
serde_json = "1.0"
mkv_chain = {version="0.3.0", path="", features=["serde"]}

[[example]]
name = "markov3"
crate-type = ["bin"]
